@@ -59,7 +59,10 @@ EXTRA_DIST = \
 	subnormal_test.stderr.exp  subnormal_test.stdout.exp \
 	subnormal_test.vgtest test_darn_inst.stderr.exp \
 	test_darn_inst.stdout.exp test_darn_inst.vgtest \
-	scv_test.stderr.exp scv_test.stdout.exp scv_test.vgtest
+	scv_test.stderr.exp scv_test.stdout.exp scv_test.vgtest \
+	test_copy_paste.stderr.exp test_copy_paste.stdout.exp \
+	test_copy_paste.vgtest
+
 
 check_PROGRAMS = \
 	allexec \
@@ -70,7 +73,7 @@ check_PROGRAMS = \
 	test_isa_3_0 test_mod_instructions \
 	test_isa_3_1_RT test_isa_3_1_XT test_isa_3_1_VRT \
 	test_isa_3_1_Misc test_isa_3_1_AT \
-	subnormal_test test_darn_inst \
+	subnormal_test test_darn_inst test_copy_paste \
 	test_tm test_touch_tm data-cache-instructions \
 	power6_mf_gpr std_reg_imm \
 	twi_tdi tw_td power6_bcmp scv_test
@@ -203,6 +206,9 @@ test_isa_3_1_AT_CFLAGS = $(test_isa_3_1_CFLAGS)
 
 subnormal_test_CFLAGS = $(AM_CFLAGS) -Winline -Wall -O -g -mregnames $(VSX_FLAG) $(ISA_2_06_FLAG) \
 			@FLAG_M64@ $(ALTIVEC_FLAG) $(BUILD_FLAG_VSX) $(BUILD_FLAGS_ISA_2_06)
+
+test_copy_paste_CFLAGS = $(AM_CFLAGS) -Winline -Wall -O -g -mregnames $(VSX_FLAG) $(ISA_3_1_FLAG) \
+			@FLAG_M64@ $(ALTIVEC_FLAG) $(BUILD_FLAG_VSX) $(BUILD_FLAGS_ISA_3_1)
 
 test_isa_2_06_part3_LDADD = -lm
 test_dfp1_LDADD = -lm
